--- a/src/DemoMvc/DemoMvc.csproj
+++ b/src/DemoMvc/DemoMvc.csproj
@@ -325,6 +325,9 @@
   <ItemGroup>
     <Content Include="Views\VuePage\_SpaceMenu.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\VueLayout2\_WidgetDemo.cshtml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
