--- a/src/DemoMvc/DemoMvc.csproj
+++ b/src/DemoMvc/DemoMvc.csproj
@@ -328,6 +328,12 @@
   <ItemGroup>
     <Content Include="Views\VueLayout2\_WidgetDemo.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\VueLayout2\TemplateJs.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\VueLayout2\TemplateInline.cshtml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
