--- a/src/CommonFx.RequireJs/CommonFx.RequireJs.csproj
+++ b/src/CommonFx.RequireJs/CommonFx.RequireJs.csproj
@@ -42,8 +42,9 @@
   <ItemGroup>
     <Compile Include="HashHelper.cs" />
     <Compile Include="Web\FileServer.cs" />
-    <Compile Include="RequireJsConfig.cs" />
+    <Compile Include="Web\JoinConfigs\JoinJsConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Web\JoinConfigs\JoinJsConfigEntry.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
